Secure admin link visibility and add return button

--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,9 @@
     <header class="site-header">
       <div class="container header-inner">
         <div class="brand"><div class="logo"><i class="fas fa-house"></i></div><div class="title">Admin — Ndako na Ngai</div></div>
+        <div class="header-actions">
+          <a href="index.html" class="btn ghost">← Retour</a>
+        </div>
       </div>
     </header>
 
