Restore visible Admin link - security handled on admin.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="title">Ndako na Ngai</div>
         </div>
           <div class="header-actions">
-            <a id="adminLink" href="admin.html" class="btn admin-link" style="display:none">Admin</a>
+            <a id="adminLink" href="admin.html" class="btn admin-link">Admin</a>
           </div>
         </div>
     </header>
