--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <title>Admin — Ndako na Ngai</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.min.css" />
     <link rel="stylesheet" href="styles.css" />
     <style>
       body { background: #f5f7fa; }
@@ -74,6 +75,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
     <script src="firebase-config.js"></script>
     <script>
       const adminArea = document.getElementById('adminArea');
@@ -284,7 +286,17 @@
       window.showDetail = function(idx){
         const e = allEntries[idx];
         const detail = JSON.stringify(e.data, null, 2);
-        alert(`Réponse #${idx+1}\n\n${detail}`);
+        Swal.fire({
+          title: `<i class="fas fa-file-lines" style="color:#2563eb"></i> Réponse #${idx+1}`,
+          html: `<pre style="text-align:left;background:#f8fafc;padding:16px;border-radius:8px;overflow:auto;max-height:400px;font-size:12px;color:#1f2937">${detail}</pre>`,
+          width: '90%',
+          maxWidth: '600px',
+          showConfirmButton: true,
+          confirmButtonText: 'Fermer',
+          confirmButtonColor: '#2563eb',
+          allowOutsideClick: true,
+          didOpen: () => { document.querySelector('.swal2-modal').style.borderRadius = '12px'; }
+        });
       };
 
       if(window.firebaseAuth){
