Form: city/neighborhood selects (Congo) + neighborhood custom; Admin: style 'Voir' button and improve card visibility; wire neighborhood in app.js

--- a/admin.html
+++ b/admin.html
@@ -39,6 +39,10 @@
       .response-card .card-body { color:#374151; font-size:13px; }
       .response-card .card-body p { margin:4px 0; }
       .response-card .card-actions button { padding:8px 12px; border-radius:8px; }
+      .response-card .btn { background: linear-gradient(90deg,#2563eb,#4f46e5); color: white; border: none; padding: 8px 12px; border-radius: 8px; box-shadow: 0 6px 14px rgba(37,99,235,0.18); cursor: pointer; }
+      .response-card .btn:hover { transform: translateY(-1px); }
+      .response-card .card-meta { font-size: 15px; color: #0f172a; font-weight: 700; }
+      .response-card .card-body strong { color: #111827; }
       .feature-list { display: grid; grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); gap: 12px; margin-top: 16px; }
       .feature-item { background: #f8fafc; padding: 12px; border-radius: 8px; border-left: 4px solid #2563eb; }
       .feature-item strong { color: #1f2937; font-size: 12px; }
