modification: de la question de participation au test lors de la mise en place de l'application

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <option>Travail / Bureau</option>
               </select>
 
-              <label for="contact">Souhaitez-vous être contacté pour participer à des tests ? (email ou téléphone)</label>
+              <label for="contact">Souhaitez-vous être contacté pour participer À des test lors de la mise en place de l’application… ? (email ou téléphone)</label>
               <input id="contact" name="contact" placeholder="Email ou téléphone (optionnel)" />
             </fieldset>
 
